# util

./: .clang-format  .clang-tidy  .codespellrc  .gersemirc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  CMakeUserPresets.json  CppCheckExcludes.txt  CppCheckSuppressions.txt  Doxyfile  README.md  buildenv-bootstrap.cmake  fetchcontent-lockfile.json  run-cppcheck.sh
basiccodesupport/: CMakeLists.txt
basiccodesupport/doc/: readme.txt
basiccodesupport/src/: algebra.test.cpp  almost_equal.test.cpp  any.test.cpp  array.test.cpp  assert.test.cpp  bits.test.cpp  c_array.test.cpp  crash.test.cpp  debug.test.cpp  empty.cpp  enum_bitset.test.cpp  enum_cast.test.cpp  error.test.cpp  ex-for-test.h  fermat_miller_rabin.test.cpp  file.test.cpp  finally.test.cpp  floating_point.test.cpp  format_number.test.cpp  foundations.test.cpp  hash.test.cpp  ignore_arg.test.cpp  ignore_unused.test.cpp  integer.test.cpp  map.test.cpp  math.test.cpp  matrix.test.cpp  narrow.test.cpp  number.test.cpp  operation.test.cpp  optional.test.cpp  overflow.test.cpp  profiler.test.cpp  ptr.test.cpp  ptr2ref.test.cpp  random.test.cpp  ratio.test.cpp  round.test.cpp  shared_instance.test.cpp  sizeof.test.cpp  (+5 more)
buildenv/: CMakeLists.txt  _beautify.bat  cmake_util.cmake
buildenv/cmake_util/: android-ndk-stl-config.cmake  asio.cmake  bigint.cmake  boost.cmake  builddir_cfg.cmake  cereal.cmake  clang-format-repo-fetch.cmake  clang-format.cmake  clang-tidy.cmake  cli11.cmake  consoletable.cmake  cpp_features.cmake  cpp_std_lib.cmake  cppcheck.cmake  curl.cmake  defaults.cmake  defs.cmake  diagnostics.cmake  doxygen.cmake  easyloggingpp.cmake  fetch-clangformat-repo.cmake  githooks.cmake  googlebenchmark.cmake  googletest.cmake  googletest_as_subdir.cmake  googletest_cfg.cmake  gperftools.cmake  grpc.cmake  gsl.cmake  iwyu.cmake  linux_tools.cmake  log_all.cmake  macos_tools.cmake  mathgl2.cmake  mathgl2_as_subdir.cmake  mathgl2_defaults.cmake  matplotlib-cpp.cmake  nlohmann-json-schema-validator.cmake  nlohmann-json.cmake  openmp.cmake  (+15 more)
buildenv/src/: comp_bwds.test.cpp  config.test.cpp  macros.test.cpp  warnings.test.cpp
examples/: CMakeLists.txt  usage.cpp
linklib/: CMakeLists.txt
linklib/src/: LINKLIB_DEFS.test.cpp
mem/: CMakeLists.txt
mem/src/: allocator.test.cpp  checked_delete.test.cpp  compiler_quirks.test.cpp  heap_tracked.test.cpp  misc.test.helper.cpp  new_handler.test.cpp  new_statistics.applied.gtest.test.cpp  new_statistics.applied.test.cpp  new_statistics.cpp  new_statistics.test.cpp  physmemusage-rss.test.cpp  types.test.cpp  utility.test.cpp
src/: CMakeLists.txt  compile-check.cpp
src/basiccodesupport/: algebra.test.cpp  almost-equal.test.cpp  almost_equal.test.cpp  any.test.cpp  array.test.cpp  assert.test.cpp  bits.test.cpp  c-array.test.cpp  c_array.test.cpp  c_string_view.test.cpp  crash.test.cpp  debug.test.cpp  enum-bitset.test.cpp  enum-cast.test.cpp  enum_bitset.test.cpp  enum_cast.test.cpp  error.test.cpp  ex-for-test.h  ex-for-test.hpp  ex_for_test.hpp  fermat-miller-rabin.test.cpp  fermat_miller_rabin.test.cpp  file.test.cpp  finally.test.cpp  floating-point.test.cpp  floating_point.test.cpp  format-number.test.cpp  format_number.test.cpp  foundations.test.cpp  hash.test.cpp  ignore-unused.test.cpp  ignore_unused.test.cpp  integer.test.cpp  map.test.cpp  math.test.cpp  matrix.test.cpp  narrow.test.cpp  number.test.cpp  operation.test.cpp  overflow.test.cpp  (+16 more)
src/buildenv/: comp-bwds.test.cpp  comp_bwds.test.cpp  config.test.cpp  macros.test.cpp  warnings.test.cpp
src/linklib/: LINKLIB-DEFS.test.cpp  LINKLIB_DEFS.test.cpp
src/mem/: allocator.test.cpp  checked-delete.test.cpp  checked_delete.test.cpp  compiler-quirks.test.cpp  compiler_quirks.test.cpp  heap-tracked.test.cpp  heap_tracked.test.cpp  misc.test.helper.cpp  new-handler.test.cpp  new_handler.test.cpp  physmemusage-rss.test.cpp  physmemusage_rss.test.cpp  types.test.cpp  utility.test.cpp
src/string/: json.test.cpp  languages.test.cpp  lex-cast.test.cpp  lex_cast.test.cpp  locale.test.cpp  makestr.test.cpp  str-convert.test.cpp  str_convert.test.cpp  string-misc.test.cpp  string-token.test.cpp  string-trim.test.cpp  string_misc.test.cpp  string_token.test.cpp  string_trim.test.cpp  ulstring.test.cpp  utf8.test.cpp
string/: .gitignore  CMakeLists.txt
string/sdks/: .clang-format  CMakeLists.txt
string/src/: empty.cpp  json.test.cpp  languages.test.cpp  lex_cast.test.cpp  locale.test.cpp  makestr.test.cpp  str_convert.test.cpp  string_misc.test.cpp  string_token.test.cpp  string_trim.test.cpp  toostring.test.cpp  ulstring.test.cpp  utf8.test.cpp
tooBasicCodeSupport/: .clang-format  CMakeLists.txt
tooBasicCodeSupport/doc/: _ToolsFoundationLayers.txt  _run as admin to create ToolsFL.txt.bat
tooBasicCodeSupport/test/: _header_compile.test.cpp  any.test.cpp  assert.test.cpp  c_array.test.cpp  debug.test.cpp  enum_cast.test.cpp  error.test.cpp  finally.test.cpp  ignore_arg.test.cpp  misc.test.cpp  narrow.test.cpp  optional.test.cpp  ptr.test.cpp  ptr2ref.test.cpp  trace.test.cpp  types.test.cpp
tooBuildEnv/: .gitignore  CMakeLists.txt  cmake_util.cmake  defaults.cmake
tooBuildEnv/cmake_util/: boost.cmake  defaults.cmake  deployment_build.cmake  googletest_as_subdir.cmake  mathgl2.cmake  mathgl2_as_subdir.cmake  mathgl2_defaults.cmake  qt.cmake  qt_deploy_TOO_TEMP_TARGET.cmake  qt_lang.cmake  uwp_tools.cmake  vld.cmake
tooBuildEnv/doc/: _ToolsFoundationLayers.txt
tooBuildEnv/test/: PPDEFS.test.cpp  _header_compile.test.cpp  dummy.cpp
tooLinklib/: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
tooLinklib/test/: LINKLIB_DEFS.test.cpp  _header_compile.test.cpp  dummy.test.cpp
tooMem/: CMakeLists.txt
tooMem/test/: _header_compile.test.cpp  heap_tracked.test.cpp  misc.test.cpp  misc.test.helper.cpp  new_handler.test.cpp
tooString/: .gitignore  .gitmodules  CMakeLists.txt
tooString/test/: _header_compile.test.cpp  locale.test.cpp  makestr.test.cpp  (+5 more)
util/: CMakeLists.txt  compile-check.cpp
(+804 files in other folders)
